# jamaat-directory-uk

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/curation/: duplicates.json
scripts/: bringup.sh
src/directory/: cli.py  config.py  db.py  domain.py  models.py  repository.py  schema.sql  schemas.py
tests/: conftest.py  test_agentic_e2e.py  test_api_admin.py  test_api_admin_discover.py  test_api_admin_refresh.py  test_api_mosques.py  test_api_times.py  test_author_fallback.py  test_author_mosque.py  test_authoring_e2e.py  test_bespoke_registry.py  test_bespoke_store.py  test_candidate_store.py  test_cli.py  test_cli_author.py  test_cli_extract.py  test_config.py  test_config_schema_bespoke.py  test_db.py  test_discover_gather.py  test_discover_liveness.py  test_discover_orchestration.py  test_discovery_e2e.py  test_domain.py  test_engine_bespoke.py  test_engine_html_repeated.py  test_engine_widget.py  test_fetch.py  test_gates.py  test_harness.py  test_materialize_grid.py  test_materialize_jumuah_rules.py  test_mib.py  test_normalize_resolve.py  test_pipeline_e2e.py  test_platform_registry.py  test_platform_wp_prayer.py  test_prompt.py  test_prompt_browse.py  test_repository.py  (+12 more)
tests/api/: test_api_admin.py  test_api_admin_author.py  test_api_mosques.py  test_api_times.py
tests/core/: test_config.py  test_db.py  test_models.py  test_repository_discover.py  test_repository_extract.py  test_repository_flags.py  test_schemas.py
tests/fixtures/: azhar_month_tables.html  dom_grid_aria.html  dom_grid_css.html  (+11 more)
(+153 files in other folders)
