[project]
name = "jamaat-directory-uk"
version = "0.1.0"
description = "UK mosque jamaat (congregational prayer) timetable directory — JSON API + browse site, data layer for the Sirat journey-planner."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "jinja2>=3.1",
    "typer>=0.12",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "python-multipart>=0.0.32",
]

[project.scripts]
directory = "directory.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
]
js = [
    "playwright>=1.60.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/directory"]

[tool.hatch.build.targets.wheel.force-include]
"src/directory/schema.sql" = "directory/schema.sql"
"src/directory/web/templates" = "directory/web/templates"
"src/directory/web/static" = "directory/web/static"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
